--- a/app/views/dice/index.html.erb
+++ b/app/views/dice/index.html.erb
@@ -1,1 +1,20 @@
 <h1>dice<h1>
+
+<%
+  die1 = rand(1..6)
+  die2 = rand(1..6)
+  total = die1 + die2
+
+%>
+
+<p>
+<img src="/images/dice/<%= die1 %>.svg" alt="Random die">
+<img src="/images/dice/<%= die2 %>.svg" alt="Random die">
+</p>
+
+<p>
+the total is <% total %></p>
+
+<p>
+  <a href="/dice">Roll Again!</a>
+</p>
